Updated the VisualStudio2010 build folder. Changed/added some Windows specific code.

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 Source/Third Party Libraries/ASIOSDK2
 Builds/MacOSX/build
+Builds/VisualStudio2010/Release
+Builds/VisualStudio2010/ipch
+Builds/VisualStudio2010/Debug
+AlphaLive.sdf
