Removing and ignoring UserInterfaceState.xcuserstate

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ Builds/VisualStudio2010/Release
 Builds/VisualStudio2010/ipch
 Builds/VisualStudio2010/Debug
 AlphaLive.sdf
+UserInterfaceState.xcuserstate
