Updated visual studio project.

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ Builds/VisualStudio2010/ipch
 Builds/VisualStudio2010/Debug
 AlphaLive.sdf
 UserInterfaceState.xcuserstate
+Builds/VisualStudio2010/AlphaLive.opensdf
