--- a/Builds/VisualStudio2010/AlphaLive.vcxproj
+++ b/Builds/VisualStudio2010/AlphaLive.vcxproj
@@ -322,6 +322,7 @@
     <ClCompile Include="..\..\Source\GUI Classes\Sub-Views\GuiGlobalPadSettings.cpp" />
     <ClCompile Include="..\..\Source\GUI Classes\Sub-Views\PreferencesComponent.cpp" />
     <ClCompile Include="..\..\Source\GUI Classes\Sub-Views\ProjectSettingsComponent.cpp" />
+    <ClCompile Include="..\..\Source\GUI Classes\Sub-Views\SoftwareUpdateComponent.cpp" />
     <ClCompile Include="..\..\Source\GUI Classes\Views\GuiControllerMode.cpp" />
     <ClCompile Include="..\..\Source\GUI Classes\Views\GuiMidiMode.cpp" />
     <ClCompile Include="..\..\Source\GUI Classes\Views\GuiSamplerMode.cpp" />
@@ -1384,18 +1385,6 @@
     <ClCompile Include="..\..\JuceLibraryCode\modules\juce_opengl\opengl\juce_OpenGLTexture.cpp">
       <ExcludedFromBuild>true</ExcludedFromBuild>
     </ClCompile>
-    <ClCompile Include="..\..\JuceLibraryCode\modules\juce_video\native\juce_android_CameraDevice.cpp">
-      <ExcludedFromBuild>true</ExcludedFromBuild>
-    </ClCompile>
-    <ClCompile Include="..\..\JuceLibraryCode\modules\juce_video\native\juce_win32_CameraDevice.cpp">
-      <ExcludedFromBuild>true</ExcludedFromBuild>
-    </ClCompile>
-    <ClCompile Include="..\..\JuceLibraryCode\modules\juce_video\native\juce_win32_DirectShowComponent.cpp">
-      <ExcludedFromBuild>true</ExcludedFromBuild>
-    </ClCompile>
-    <ClCompile Include="..\..\JuceLibraryCode\modules\juce_video\native\juce_win32_QuickTimeMovieComponent.cpp">
-      <ExcludedFromBuild>true</ExcludedFromBuild>
-    </ClCompile>
     <ClCompile Include="..\..\JuceLibraryCode\modules\juce_audio_basics\juce_audio_basics.cpp" />
     <ClCompile Include="..\..\JuceLibraryCode\modules\juce_audio_devices\juce_audio_devices.cpp" />
     <ClCompile Include="..\..\JuceLibraryCode\modules\juce_audio_formats\juce_audio_formats.cpp" />
@@ -1409,7 +1398,6 @@
     <ClCompile Include="..\..\JuceLibraryCode\modules\juce_gui_basics\juce_gui_basics.cpp" />
     <ClCompile Include="..\..\JuceLibraryCode\modules\juce_gui_extra\juce_gui_extra.cpp" />
     <ClCompile Include="..\..\JuceLibraryCode\modules\juce_opengl\juce_opengl.cpp" />
-    <ClCompile Include="..\..\JuceLibraryCode\modules\juce_video\juce_video.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\Source\Application\AbstractSubjectAndObserver.h" />
@@ -1503,6 +1491,7 @@
     <ClInclude Include="..\..\Source\GUI Classes\Sub-Views\GuiGlobalPadSettings.h" />
     <ClInclude Include="..\..\Source\GUI Classes\Sub-Views\PreferencesComponent.h" />
     <ClInclude Include="..\..\Source\GUI Classes\Sub-Views\ProjectSettingsComponent.h" />
+    <ClInclude Include="..\..\Source\GUI Classes\Sub-Views\SoftwareUpdateComponent.h" />
     <ClInclude Include="..\..\Source\GUI Classes\Views\GlobalValues.h" />
     <ClInclude Include="..\..\Source\GUI Classes\Views\GuiControllerMode.h" />
     <ClInclude Include="..\..\Source\GUI Classes\Views\GuiMidiMode.h" />
@@ -1967,10 +1956,6 @@
     <ClInclude Include="..\..\JuceLibraryCode\modules\juce_opengl\native\juce_OpenGL_win32.h" />
     <ClInclude Include="..\..\JuceLibraryCode\modules\juce_opengl\native\juce_OpenGLExtensions.h" />
     <ClInclude Include="..\..\JuceLibraryCode\modules\juce_opengl\juce_opengl.h" />
-    <ClInclude Include="..\..\JuceLibraryCode\modules\juce_video\playback\juce_DirectShowComponent.h" />
-    <ClInclude Include="..\..\JuceLibraryCode\modules\juce_video\playback\juce_QuickTimeMovieComponent.h" />
-    <ClInclude Include="..\..\JuceLibraryCode\modules\juce_video\capture\juce_CameraDevice.h" />
-    <ClInclude Include="..\..\JuceLibraryCode\modules\juce_video\juce_video.h" />
     <ClInclude Include="..\..\JuceLibraryCode\AppConfig.h" />
     <ClInclude Include="..\..\JuceLibraryCode\JuceHeader.h" />
     <ClInclude Include="resource.h" />
@@ -1989,7 +1974,6 @@
     <None Include="..\..\JuceLibraryCode\modules\juce_gui_basics\juce_module_info" />
     <None Include="..\..\JuceLibraryCode\modules\juce_gui_extra\juce_module_info" />
     <None Include="..\..\JuceLibraryCode\modules\juce_opengl\juce_module_info" />
-    <None Include="..\..\JuceLibraryCode\modules\juce_video\juce_module_info" />
     <None Include="document_icon.ico" />
     <None Include="icon.ico" />
   </ItemGroup>
