Updated .gitignore in regards to the Xcode 3 project.

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@ Builds/VisualStudio2010/Debug
 AlphaLive.sdf
 UserInterfaceState.xcuserstate
 Builds/VisualStudio2010/AlphaLive.opensdf
+Liam.pbxuser
+Liam.mode1v3
