--- a/Builds/VisualStudio2010/resources.rc
+++ b/Builds/VisualStudio2010/resources.rc
@@ -14,8 +14,8 @@ LANGUAGE LANG_ENGLISH, SUBLANG_ENGLISH_UK
 //
 
 VS_VERSION_INFO VERSIONINFO
- FILEVERSION 1,0,0,0
- PRODUCTVERSION 0,0,0,0
+ FILEVERSION 1,1,0,0
+ PRODUCTVERSION 1,1,0,0
  FILEFLAGSMASK 0x0L
 #ifdef _DEBUG
  FILEFLAGS 0x1L
@@ -23,23 +23,24 @@ VS_VERSION_INFO VERSIONINFO
  FILEFLAGS 0x0L
 #endif
  FILEOS 0x0L
- FILETYPE 0x0L
+ FILETYPE 0x1L
  FILESUBTYPE 0x0L
 BEGIN
     BLOCK "StringFileInfo"
     BEGIN
-        BLOCK "040904E4"
+        BLOCK "040904e4"
         BEGIN
             VALUE "CompanyName", "nu desine"
             VALUE "FileDescription", "AlphaLive"
-            VALUE "FileVersion", "1.0.0"
+            VALUE "FileVersion", "1.1.0.0"
+            VALUE "LegalCopyright", "nu desine"
             VALUE "ProductName", "AlphaLive"
-            VALUE "ProductVersion", "1.0.0"
+            VALUE "ProductVersion", "1.1.0.0"
         END
     END
     BLOCK "VarFileInfo"
     BEGIN
-        VALUE "Translation", 0x409, 65001
+        VALUE "Translation", 0x409, 1252
     END
 END
 
