--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ Builds/VisualStudio2010/AlphaLive.opensdf
 Liam.pbxuser
 Liam.mode1v3
 Builds/VisualStudio2010/x64/
+Source/Third Party Libraries/ASIOSDK/
