Fixed a bug where MIDI input and output over virtual ports on Windows wasn't working anymore. The output stuff stopped working when I started using the official audiodeviceselectorcomponent class, but I'm not even sure how the MIDI input stuff was ever working. Maybe I didn't test it. Need to test this new stuff on windows, as well as remove the old audio component files.

--- a/Builds/VisualStudio2010/AlphaLive.vcxproj
+++ b/Builds/VisualStudio2010/AlphaLive.vcxproj
@@ -68,6 +68,8 @@
     <LibraryPath Condition="'$(Configuration)|$(Platform)'=='Release|x64'">$(VCInstallDir)lib\amd64;$(VCInstallDir)atlmfc\lib\amd64;$(WindowsSdkDir)lib\x64;C:\WinDDK\7600.16385.1\lib\win7\amd64;</LibraryPath>
     <IncludePath Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">$(VCInstallDir)include;$(VCInstallDir)atlmfc\include;$(WindowsSdkDir)include;$(FrameworkSDKDir)\include;C:\WinDDK\7600.16385.1\inc;</IncludePath>
     <LibraryPath Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">$(VCInstallDir)lib;$(VCInstallDir)atlmfc\lib;$(WindowsSdkDir)lib;$(FrameworkSDKDir)\lib;C:\WinDDK\7600.16385.1\lib\win7\i386;</LibraryPath>
+    <IncludePath Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">$(VCInstallDir)include;$(VCInstallDir)atlmfc\include;$(WindowsSdkDir)include;$(FrameworkSDKDir)\include;C:\WinDDK\7600.16385.1\inc;</IncludePath>
+    <LibraryPath Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">$(VCInstallDir)lib\amd64;$(VCInstallDir)atlmfc\lib\amd64;$(WindowsSdkDir)lib\x64;C:\WinDDK\7600.16385.1\lib\win7\amd64;</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <Midl>
@@ -295,7 +297,6 @@
     <ClCompile Include="..\..\Source\GUI Classes\Custom Components\Effects\Effects GUIs\FxGuiReverb.cpp" />
     <ClCompile Include="..\..\Source\GUI Classes\Custom Components\Effects\Effects GUIs\FxGuiTremolo.cpp" />
     <ClCompile Include="..\..\Source\GUI Classes\Custom Components\Effects\GuiFxDial.cpp" />
-    <ClCompile Include="..\..\Source\GUI Classes\Custom Components\General\AlphaAudioSettingsComponent.cpp" />
     <ClCompile Include="..\..\Source\GUI Classes\Custom Components\General\AlphaPopUpButton.cpp" />
     <ClCompile Include="..\..\Source\GUI Classes\Custom Components\General\AlphaPopUpImageButton.cpp" />
     <ClCompile Include="..\..\Source\GUI Classes\Custom Components\General\AlphaRotarySlider.cpp" />
@@ -1495,7 +1496,6 @@
     <ClInclude Include="..\..\Source\GUI Classes\Custom Components\Effects\Effects GUIs\FxGuiReverb.h" />
     <ClInclude Include="..\..\Source\GUI Classes\Custom Components\Effects\Effects GUIs\FxGuiTremolo.h" />
     <ClInclude Include="..\..\Source\GUI Classes\Custom Components\Effects\GuiFxDial.h" />
-    <ClInclude Include="..\..\Source\GUI Classes\Custom Components\General\AlphaAudioSettingsComponent.h" />
     <ClInclude Include="..\..\Source\GUI Classes\Custom Components\General\AlphaPopUpButton.h" />
     <ClInclude Include="..\..\Source\GUI Classes\Custom Components\General\AlphaPopUpImageButton.h" />
     <ClInclude Include="..\..\Source\GUI Classes\Custom Components\General\AlphaRotarySlider.h" />
