Corrected Windows compilation issues - corrected HIDAPI library include path, added needed include for the DspFilters library code, re-applied needed include for the ASIO SDK. Added comments to the included HIDAPI code to document how it's been imported from the HIDAPI library.

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,6 @@ Liam.mode1v3
 Builds/VisualStudio2010/x64/
 Source/Third Party Libraries/ASIOSDK/
 InstallerGenerators/AlphaLiveMacInstallerProject/build
+Builds/VisualStudio2019/.vs/
+Builds/VisualStudio2019/x64/
+Builds/VisualStudio2019/AlphaLive_App.vcxproj.user
